// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tree.Node > should render with custom content 1`] = `
<div>
  <tree-node
    data-tree-node="true"
  >
    <!---->
     
    <!---->
     
    <!---->
    <span>
      Wait a minute!
    </span>
    
    <!---->
  </tree-node>
  
</div>
`;

exports[`Tree.Node > should render with custom content 2`] = `
<div>
  <tree-node
    class="flex items-center justify-center p-10"
    data-tree-node="true"
  >
    <!---->
     
    <!---->
     
    <!---->
    <span>
      Wait a minute!
    </span>
    
    <!---->
  </tree-node>
  
</div>
`;

exports[`Tree.Node > should render with custom props 1`] = `
<div>
  <tree-node
    data-label-x=""
    data-tree-empty="xyz"
    data-tree-node="true"
  >
    <!---->
     
    <!---->
     
    <!---->
    Node...
    
    <!---->
  </tree-node>
  
</div>
`;

exports[`Tree.Node > should render with string content 1`] = `
<div>
  <tree-node
    data-tree-node="true"
  >
    <!---->
     
    <!---->
     
    <!---->
    Node...
    
    <!---->
  </tree-node>
  
</div>
`;

exports[`Tree.Node > should render with string content 2`] = `
<div>
  <tree-node
    class="flex items-center justify-center p-10"
    data-tree-node="true"
  >
    <!---->
     
    <!---->
     
    <!---->
    Node...
    
    <!---->
  </tree-node>
  
</div>
`;
